[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gwemopt"
authors = [
    {name = "Michael Coughlin", email = "michael.coughlin@ligo.org"},
]
description = "A python package for GW-EM Followup Optimization"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]
dependencies = [
    'numba',
    'numpy>=2.0',
    'scipy>=1.14',
    'matplotlib>=3.5',
    'astropy>=6.0',
    'astropy-healpix',
    'mocpy>=0.16.0',
    'astroquery',
    'astroplan',
    'ephem',
    'joblib',
    'igwn-segments',
    'ligo.skymap',
    'lxml',
    'h5py',
    'healpy',
    'pandas',
    'shapely',
    'tables',
    'requests',
    'tqdm',
    'regions'
]

dynamic = ["version"]

[project.optional-dependencies]
milp = [
    'ortools',
    'pulp',
]
test = [
    'pytest',
    'pytest-runner',
    'coverage',
    'coveralls',
    'freezegun',
    'cdshealpix',
]

[dependency-groups]
dev = [
    'black',
    'isort',
    'pre-commit',
    'bumpver',
]

[project.scripts]
gwemopt-run = "gwemopt.run:run"

[tool.setuptools_scm]
write_to = "gwemopt/_version.py"

[tool.setuptools]
packages = ["gwemopt"]

[tool.setuptools.package-data]
gwemopt = ['data/*/*']

[tool.coverage.run]
source = ["gwemopt"]
omit = [
    "gwemopt/tests/*",
    "gwemopt/__main__.py",
    "gwemopt/_version.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise KeyError",
    "except KeyError",
    "raise ValueError",
    "except JSONDecodeError:",
    "raise requests.exceptions.RequestException",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    'if __name__ == "__main__":',
    "err =",
    "logger.error",
    "raise"
    ]
ignore_errors = true

[tool.isort]
profile = "black"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "gwemopt/_version.py"
versionfile_build = "gwemopt/_version.py"
tag_prefix = ""
parentdir_prefix = "gwemopt-"

[tool.pytest.ini_options]
addopts = "--verbose -r s -m 'not network'"
markers = [
    "network: tests that require network access (e.g. catalog downloads)",
]

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
